--- a/client/package.json
+++ b/client/package.json
@@ -18,10 +18,10 @@
     "circular-dependency-plugin": "^2.0.0",
     "react": "^15.3.2",
     "react-dom": "^15.3.2",
+    "react-player": "^0.12.1",
     "react-redux": "^4.4.5",
     "react-router": "^3.0.0",
     "react-router-redux": "^4.0.7",
-    "react-youtube": "^7.2.0",
     "redux": "^3.6.0",
     "redux-promise": "^0.5.3",
     "webpack": "^1.13.3",
