--- a/server/package.json
+++ b/server/package.json
@@ -22,6 +22,7 @@
     "kuroshiro": "^0.1.2",
     "lout": "^9.2.0",
     "mongodb": "^2.2.11",
+    "react-dom": "^15.4.1",
     "vision": "^4.1.0"
   }
 }
